@@ -1,3 +1,9 @@
+2011-11-09  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/axis.c src/command.c src/eval.c src/gadgets.c src/graphics.c
+	src/internal.c src/tables.c src/unset.c src/util.c src/util.h
+	term/post.trm:  Fix or remove some FIXMEs.
+
 2011-11-09  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* doc/gnuplot.doc: New terminal driver epscairo.
